@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-03-16T01:14:35Z",
+  "timestamp" : "2025-03-20T01:09:25Z",
   "count_outdated" : 248,
   "uniques_outdated" : 216,
-  "count" : 256,
-  "uniques" : 222,
+  "count" : 257,
+  "uniques" : 223,
   "clones" : [
     {
       "timestamp": "2025-03-06T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-03-07T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-03-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
