@@ -1,11 +1,11 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2025-03-06T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-03-07T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2025-03-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
